--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ bower_components
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
+build/
 
 # Dependency directories
 node_modules/
@@ -56,3 +57,7 @@ typings/
 
 # Yarn Integrity file
 .yarn-integrity
+
+# dependencies
+/.pnp
+.pnp.js
